# ScienceRover

./: config.py  main.py  paper.md  pyproject.toml  readme.md  requirements.txt
agents/: __init__.py  critic.py  graph_reasoning.py  ontologist.py  scientist.py  shared.py
static/css/: style.css
static/js/: main.js
templates/: index.html
