[tool.poetry]
name = "repl-nix-pythonpaperboilerplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.32.3"
networkx = "^3.3"
groq = "^0.11.0"
python-louvain = "^0.16"
spacy = "3.5.0"
node2vec = "^0.5.0"
scikit-learn = "^1.5.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
